@@ -1,3 +1,8 @@
+2009-06-04  Brian Gough  <bjg@network-theory.co.uk>
+
+	* hermtd.c (gsl_linalg_hermtd_unpack): use U as matrix name
+	instead of Q
+
 2008-10-20  Brian Gough  <bjg@network-theory.co.uk>
 
 	* svd.c (gsl_linalg_SV_decomp_jacobi): change use of
